--- a/templates/WORKSPACE.jinja
+++ b/templates/WORKSPACE.jinja
@@ -35,7 +35,7 @@ container_pull(
     name = "mediawiki-linux-amd64",
     registry = "index.docker.io",
     repository = "library/mediawiki",
-    digest = {{ versions.MEDIAWIKI_DIGEST }} # mediawiki:{{ versions.MEDIAWIKI_VERSION }} linux/amd64
+    digest = "{{ versions.MEDIAWIKI_DIGEST }}" # mediawiki:{{ versions.MEDIAWIKI_VERSION }}, linux/amd64
 )
 
 
