Unit and integration tests.

--- a/templates/container/tests/semantics_enabled.yaml.jinja
+++ b/templates/container/tests/semantics_enabled.yaml.jinja
@@ -26,3 +26,32 @@ commandTests:
       - "--testsuite"
       - "semantic-mediawiki-check"
     exitCode: 0
+  - name: "semantic-mediawiki-unit"
+    command: "php"
+    args: 
+      - "composer.phar"
+      - "phpunit"
+      - "-n"
+      - "-d"
+      - "extensions/SemanticMediaWiki"
+      - "--" 
+      - "--testsuite"
+      - "semantic-mediawiki-unit"
+      - "--filter"
+      - "^((?!ScopeMemoryLimiterTest::testExecute|CsvFileExportPrinterTest::testLink|ProtectionValidatorTest::testIsClassifiedAsImportPerformerProtected_CreatorAndCurrentUserDontMatch|TemplateFileExportPrinterTest::testLink).)*$" 
+    exitCode: 0
+
+  - name: "semantic-mediawiki-integration"
+    command: "php"
+    args:
+      - "composer.phar"
+      - "phpunit"
+      - "-n"
+      - "-d"
+      - "extensions/SemanticMediaWiki"
+      - "--" 
+      - "--testsuite"
+      - "semantic-mediawiki-integration"
+      - "--filter"
+      - "^((?!testRdfSerializationForInterwikiAnnotation|JSONScriptTestCaseRunnerTest::testCaseFile|testPageCreationAndRevisionHandlingBeforeLinksUpdate|testPreprocessTemplateAndParse|ScopeMemoryLimiterTest::testExecute|CsvFileExportPrinterTest::testLink|TemplateFileExportPrinterTest::testLink|testIsClassifiedAsImportPerformerProtected_CreatorAndCurrentUserDontMatch|DumpRDFTest::testRun|TitleMoveCompleteIntegrationTest::testPageMoveWithCreationOfRedirectTarget|TitleMoveCompleteIntegrationTest::testPageMoveWithRemovalOfOldPage|UpdateJobRoundtripTest::testPageMoveTriggersUpdateJob|RdfFileResourceTest::testFileUploadForDummyTextFile|RedirectTargetFinderIntegrationTest::testRedirectParseUsingMoveToPage|ComparatorFilterConditionQueryDBIntegrationTest::testTextConjunctionConstraints).)*$" 
+    exitCode: 0
