--- a/versions.jinja
+++ b/versions.jinja
@@ -2,6 +2,7 @@
 {% set MEDIAWIKI_VERSION="1.35.3" %}
 {% set SEMANTIC_MEDIAWIKI_VERSION="3.2.3" %}
 {% set LIBPCRE3_VERSION="2:8.39-13" %}
+{% set COMPOSER_VERSION="2.1.14" %}
 {% set ZIP_VERSION="3.0-12" %}
 {% set UNZIP_VERSION="6.0-26" %}
 {% set PHP_VERSION="7.4.[0-9]+" %}
