Use less verbose test command

--- a/templates/container/tests/semantics_enabled.yaml.jinja
+++ b/templates/container/tests/semantics_enabled.yaml.jinja
@@ -10,7 +10,7 @@ commandTests:
     command: "php"
     args: 
       - "composer.phar"
-      - "phpunit"
+      - "test"
       - "-n"
       - "-d"
       - "extensions/SemanticMediaWiki"
@@ -22,7 +22,7 @@ commandTests:
     command: "php"
     args: 
       - "composer.phar"
-      - "phpunit"
+      - "test"
       - "-n"
       - "-d"
       - "extensions/SemanticMediaWiki"
@@ -34,7 +34,7 @@ commandTests:
     command: "php"
     args: 
       - "composer.phar"
-      - "phpunit"
+      - "test"
       - "-n"
       - "-d"
       - "extensions/SemanticMediaWiki"
@@ -49,7 +49,7 @@ commandTests:
     command: "php"
     args:
       - "composer.phar"
-      - "phpunit"
+      - "test"
       - "-n"
       - "-d"
       - "extensions/SemanticMediaWiki"
